--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <body>
         <img src="https://дача-удача.рф/img/logo.png">
         <header>
-            <h2 class="gradient-text"> ꧁༺ 𝓓𝓪𝓬𝓱𝓪 𝓤𝓭𝓪𝓬𝓱𝓪 ༻꧂ </h2>
+            <h3 class="Nt"> ꧁༺ 𝓓𝓪𝓬𝓱𝓪 𝓤𝓭𝓪𝓬𝓱𝓪 ༻꧂ </h3>
         </header>
         <main>
             <nav>
@@ -17,6 +17,7 @@
             <li><a class="href=">Оптом</a></li>
             <li><a class="href=">Доставка</a></li>
             <li><a class="href=">Возврат товара</a></li>
+            <li><a class="href=">Основа</a></li>
         </ul>
         </nav>
             <h1>Профессионалы похого не советуют</h1>
@@ -24,25 +25,25 @@
                 <article>
                     <h2>Этот цветок называют Адениум</h2>
                     <img src="https://www.supersadovnik.ru/binfiles/images/20201210/b30eb8a0.jpg" width="400px" height="300px"/>
-                    <h3>Его цена:250$</h3>
+                    <h4>Его цена:250$</h4>
                     <a class="article-but" href="">Подробнее</a>
                 </article>
                 <article>
                     <h2>Этот цветок один из самых лучших</h2>
                     <img src="https://n1s1.hsmedia.ru/eb/dd/bd/ebddbde6d887a42c5ebb26fbc665edb9/1000x745_0xac120003_712632971587735889.jpg" width="330px" height="300px"/>
-                    <h3>Его цена:400$</h3>
+                    <h4>Его цена:400$</h4>
                     <a class="article-but" href="">Подробнее</a>
                 </article>
                 <article>
                     <h2>А это наш самый красивый цветок</h2>
                     <img src="https://rascvetochka.ru/upload/images/cvetok-babochka.jpg" width="400px" height="300px"/>
-                    <h3>Его стоимость:1000$</h3>
+                    <h4>Его стоимость:1000$</h4>
                     <a class="article-but" href="">Подробнее</a>
                 </article>
                 <article>
                     <h2>Это наше уникальное и редкое растение на грани вымирания</h2>
                     <img src="https://i.pinimg.com/474x/32/e6/6c/32e66cb9fc4661e3bd355ccd37aa1a81.jpg" width="400px" height="300px"/>
-                    <h3>Его цена: 1200$</h3>
+                    <h4>Его цена: 1200$</h4>
                     <a class="article-but" href="">Подробнее</a>
                 </article>
             </section>
